--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <form>
             <h1>Zarejestruj się!</h1>
 
-            <div class="form-box">
+            <div class="form-box error">
                 <label for="username">Nazwa użytkownika:</label>
                 <input type="text" id="username" placeholder="Nazwa użytkownika...">
                 <p class="error-text">error</p>
