--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                 <button class="send">Wyślij</button>
             </div>
 
-            <div class="popup show-popup">
+            <div class="popup">
                 <p class="popup-text">Formularz został poprawnie wysłany!</p>
                 <button class="popup-close">Zamknij</button>
             </div>
