--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Formularz</title>
+    <link rel="icon" href="./favicon/icons8-test-96.png">
     <link rel="stylesheet" href="./css/style.css">
 </head>
 
